--- a/config_sample.env
+++ b/config_sample.env
@@ -1,16 +1,16 @@
 # Remove this line before deploying
-_____REMOVE_THIS_LINE_____=True
+# _____REMOVE_THIS_LINE_____=True
 # REQUIRED CONFIG
-BOT_TOKEN = ""                              # Require restart after changing it while bot running
-OWNER_ID = ""                               # Require restart after changing it while bot running
-TELEGRAM_API = ""                           # Require restart after changing it while bot running
-TELEGRAM_HASH = ""                          # Require restart after changing it while bot running
+BOT_TOKEN = "7219185320:AAE76oh6RBbj0EuUlPNIdVAtIpdeL1K2hfs"                              # Require restart after changing it while bot running
+OWNER_ID = "6066102279"                               # Require restart after changing it while bot running
+TELEGRAM_API = "26378339"                           # Require restart after changing it while bot running
+TELEGRAM_HASH = "d5b14fef7f38588836b1a8ba762f8f08"                          # Require restart after changing it while bot running
 
 # OPTIONAL CONFIG
 USER_SESSION_STRING = ""                    # Require restart after changing it while bot running
-DATABASE_URL = ""                           # Require restart after changing it while bot running
+DATABASE_URL = "mongodb+srv://sharku:zKKosLfBvResoqhF@cluster0.jped6.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0"                           # Require restart after changing it while bot running
 DOWNLOAD_DIR = "/usr/src/app/downloads/"    # Require restart after changing it while bot running
-CMD_SUFFIX = ""                             # Require restart after changing it while bot running
+CMD_SUFFIX = "a"                             # Require restart after changing it while bot running
 AUTHORIZED_CHATS = ""                       # Require restart after changing it while bot running
 SUDO_USERS = ""                             # Require restart after changing it while bot running
 BLACKLIST_USERS = ""                        # Require restart after changing it while bot running
@@ -22,7 +22,7 @@ INCOMPLETE_TASK_NOTIFIER = "False"
 SET_COMMANDS = "True"
 EXTENSION_FILTER = ""
 YT_DLP_OPTIONS = ""
-FSUB_IDS = ""
+FSUB_IDS = "-1002075434712"
 BOT_PM = "True"
 
 # GDrive Tools
@@ -34,7 +34,7 @@ USE_SERVICE_ACCOUNTS = "False"
 IS_TEAM_DRIVE = "False"
 STOP_DUPLICATE = "False"
 DISABLE_DRIVE_LINK = "False"
-GD_INFO = "Uploaded by Leech Bot"
+GD_INFO = "Uploaded by Shark Toons India Leech Bot"
 
 # API's/Cookies
 REAL_DEBRID_API = ""
@@ -62,13 +62,13 @@ AS_DOCUMENT = "True"
 EQUAL_SPLITS = "False"
 MEDIA_GROUP = "False"
 CAP_FONT = "b"
-LEECH_FILENAME_PREFIX = ""
-LEECH_FILENAME_SUFFIX = ""
-LEECH_FILENAME_CAPTION = ""
-LEECH_FILENAME_REMNAME = ""
-MIRROR_FILENAME_PREFIX = ""
-MIRROR_FILENAME_SUFFIX = ""
-MIRROR_FILENAME_REMNAME = ""
+LEECH_FILENAME_PREFIX = "SharkToonsIndia"
+LEECH_FILENAME_SUFFIX = "SharkToonsIndia"
+LEECH_FILENAME_CAPTION = "SharkToonsIndia"
+LEECH_FILENAME_REMNAME = "SharkToonsIndia"
+MIRROR_FILENAME_PREFIX = "SharkToonsIndia"
+MIRROR_FILENAME_SUFFIX = "SharkToonsIndia"
+MIRROR_FILENAME_REMNAME = "SharkToonsIndia"
 
 # Log Channel/SuperGroup (Topics Support)
 LEECH_LOG_ID = ""
@@ -117,9 +117,9 @@ IMDB_TEMPLATE = ""
 MDL_TEMPLATE = ""
 
 # Telegraph
-TITLE_NAME = "Leech Bot"
-AUTHOR_NAME = "KPS Bots"
-AUTHOR_URL = "https://telegram.me/KPSBots"
+TITLE_NAME = "Shark M/L Bot"
+AUTHOR_NAME = "Shark Bots"
+AUTHOR_URL = "https://telegram.me/SharkToonsIndia"
 COVER_IMAGE = ""
 
 # Extra
